// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form-field-radio #render should render component as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-radio class="gux-input-error">
  <template shadowrootmode="open">
    <div class="gux-form-field-container" aria-disabled="false">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input">
          </slot>
        </div>
        <div class="gux-label">
          <slot name="label">
          </slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div role="alert" class="gux-form-field-error gux-show">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="radio" name="food-1" value="pizza" id="gux-form-field-input-i" aria-invalid="true" aria-describedby="gux-form-field-error-i">
  <label slot="label" for="gux-form-field-input-i">
    Pizza
  </label>
  <span slot="error" id="gux-form-field-error-i">
    This is an error message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-radio>
  <template shadowrootmode="open">
    <div class="gux-form-field-container" aria-disabled="false">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input">
          </slot>
        </div>
        <div class="gux-label">
          <slot name="label">
          </slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="radio" name="food-1" value="pizza" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i">
  <label slot="label" for="gux-form-field-input-i">
    Pizza
  </label>
  <span slot="help" id="gux-form-field-help-i">
    This is a help message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when checked 1`] = `
<gux-form-field-radio>
  <template shadowrootmode="open">
    <div class="gux-form-field-container" aria-disabled="false">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input">
          </slot>
        </div>
        <div class="gux-label">
          <slot name="label">
          </slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="radio" name="food-1" value="pizza" checked="" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Pizza
  </label>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when default 1`] = `
<gux-form-field-radio>
  <template shadowrootmode="open">
    <div class="gux-form-field-container" aria-disabled="false">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input">
          </slot>
        </div>
        <div class="gux-label">
          <slot name="label">
          </slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="radio" name="food-1" value="pizza" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Pizza
  </label>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when disabled 1`] = `
<gux-form-field-radio class="gux-disabled">
  <template shadowrootmode="open">
    <div class="gux-form-field-container" aria-disabled="true">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input">
          </slot>
        </div>
        <div class="gux-label">
          <slot name="label">
          </slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="radio" name="food-1" value="pizza" disabled="" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Pizza
  </label>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when disabled with error 1`] = `
<gux-form-field-radio class="gux-input-error gux-disabled">
  <template shadowrootmode="open">
    <div class="gux-form-field-container" aria-disabled="true">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input">
          </slot>
        </div>
        <div class="gux-label">
          <slot name="label">
          </slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div role="alert" class="gux-form-field-error gux-show">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="radio" name="food-1" value="pizza" disabled="" id="gux-form-field-input-i" aria-invalid="true" aria-describedby="gux-form-field-error-i">
  <label slot="label" for="gux-form-field-input-i">
    Pizza
  </label>
  <span slot="error" id="gux-form-field-error-i">
    Error message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected when disabled with help 1`] = `
<gux-form-field-radio class="gux-disabled">
  <template shadowrootmode="open">
    <div class="gux-form-field-container" aria-disabled="true">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input">
          </slot>
        </div>
        <div class="gux-label">
          <slot name="label">
          </slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="radio" name="food-1" value="pizza" disabled="" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i">
  <label slot="label" for="gux-form-field-input-i">
    Pizza
  </label>
  <span slot="help" id="gux-form-field-help-i">
    This is a help message
  </span>
</gux-form-field-radio>
`;
